// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload-user-current-avatar should handle non-existent temporary file id 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Avatar file not found","status":400,"detail":"The file key did not resolve in to a file","operationStatus":"AvatarFileNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`upload-user-current-avatar should upload avatar for current user 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
